--- a/praktikum6/burung.html
+++ b/praktikum6/burung.html
@@ -3,6 +3,7 @@
     <head>
         <title>Burung Perkutut Jawa</title>
         <meta name="description" content="Budidaya Perkutut Jawa">
+        <link rel="stylesheet" href="Styles.css">
     </head>
     <body>
         <div id="header">
@@ -16,7 +17,7 @@ Aku mendengarkan Indonesia <br/>
             </blockquote>
         </div>
         <div>
-            <ul>
+            <ul class="pro">
             <li><a href="#profil">Profil</a></li>
             <li><a href="#berternak">Budidaya</a></li>
             <li><a href="#harga">Harga</a></li>
@@ -29,7 +30,7 @@ Aku mendengarkan Indonesia <br/>
         </div>
         <div class="isi">
             <p>
-                Burung <span class="jawa">Perkutut Jawa</span> dengan nama latin <i>Geopelia striata</i> bukan hanya burung yang mampu bersuara, 
+                <div class="bBesar">B</div>urung <span class="jawa">Perkutut Jawa</span> dengan nama latin <i>Geopelia striata</i> bukan hanya burung yang mampu bersuara, 
                 akan tetapi burung ini mempunyai beragam keunikan yang tidak dimiliki oleh burung lainnya. Bagi sebagian pemelihara burung, dengan hanya melihat perkutut, 
                 sudah bisa memastikan bagaimana suara yang akan dihasilkan.
                 Salah satu kebiasaan dari burung ini adalah terbang dan bertengger di kebun atau ladang. Selain itu, mereka juga sering mencari makan di jalan yang jarang dilintasi oleh manusia </p>
